# single-source

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: python-package.yml
single_source/: __init__.py  errors.py  version.py
tests/: conftest.py  test_regex.py  test_version.py
tests/data/: pyproject.toml  setup.py
