[tool.poetry]
name = "single-source"
version = "0.4.0"
description = "Access to the project version in Python code for PEP 621-style projects"
authors = ["Daniil Shadrin <rabbit72rus@gmail.com>"]
maintainers = ["Daniil Shadrin <rabbit72rus@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/rabbit72/single-source"
repository = "https://github.com/rabbit72/single-source.git"

keywords = ["pyproject", "version", "__version__", "poetry", "single source"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "single_source"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/rabbit72/single-source/issues"

[tool.poetry.dev-dependencies]
toml = "^0.10.2"
pytest = "*"
pytest-mock = "*"
black = "^24.4.2"
isort = {version = "*", extras = ["pyproject"]}
flake8 = "*"
flake8-bugbear = "*"
pre-commit = "*"
mypy = "^1.10.0"


[tool.poetry.dependencies]
python = "^3.8"


[tool.black]
line-length = 88
target-version = ['py38']

# backward compatibility with black
[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = ["pytest", "setuptools", "toml"]

# backward compatibility with black
[tool.pylint.messages_control]
disable = "C0330, C0326"
[tool.pylint.format]
max-line-length = "88"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
